tests/negative/neg_write_to_constant_assign.safe
-- Test: neg_write_to_constant_assign
-- Description: Direct assignment to a local constant must be rejected.
-- Expected: REJECT write_to_constant

package Neg_Write_To_Constant_Assign is

   function Run is
      Limit : constant Integer = 1;
   begin
      Limit = 2;
   end Run;

end Neg_Write_To_Constant_Assign;
